--- a/languages/en.json
+++ b/languages/en.json
@@ -23,5 +23,54 @@
                 "manual_reload": "Display the manual information update button"
             }
         }
-    }
+    },
+
+    "floor": "Floor",
+    "no-meeting": "No more meeting for today",
+    "no-building": "No building found",
+    "no-meeting-room": "No meeting room found",
+    "no-building-rooms": "Meeting room(s) not linked to a building",
+    "organized-by": "Organized by",
+    "with": "With",
+    "attendee": "Attendee",
+    "attendees": "Attendees",
+    "available-until": "Available until",
+    "free-now": "Available now",
+    "book-now": "Book now",
+    "booked": "Booked",
+    "booking": "Booking",
+    "select-building": "Select a building",
+    "select-meeting-room": "Select the meeting room",
+    "valid": "Valid",
+    "loading": "Loading",
+    "search": "Search a meeting room",
+    "error_meeting_room_access": "No access to meeting room information",
+    "error_appointments_access": "No access to meeting room events",
+    "error_building_access": "No access to the buildings list",
+    "error_meeting_rooms_access": "No access to the meeting rooms list",
+    "choose-the-duration": "Select duration",
+    "validate-booking": "Book",
+    "cancel": "Cancel",
+    "15min":  "15 min",
+    "30min": "30 min",
+    "one-hour": "1 hour",
+    "until-the-end-of-the-hour": "Until the end of the hour",
+    "until-the-next-reservation": "Until the next meeting",
+    "out-duration-message": ": Duration exceeds the start time of the next meeting",
+    "check-in": "Start Meeting",
+    "checkin-qrcode-title": "Check in",
+    "check-out": "End Meeting",
+    "checkout-qrcode-title": "Check out",
+    "meeting-finished": "Meeting ended, synchronizing...",
+    "popup-oops-title": "Oops",
+    "popup-oops-message": "Something went wrong. Please try again later.",
+    "scan-qrcode": "Scan the QR Code to book the meeting room",
+    "checked-title": "Yeah!",
+    "checked-message": "Your meeting is starting",
+    "checked-out-title": "It's over",
+    "checked-out-message": "Your meeting is over",
+    "next-meeting-start-in": "Next meeting in",
+    "on-the-fly-meeting": "On-the-fly meeting",
+    "meeting": "Meeting",
+    "booked-from-this-display": "Booked from this display"
 }
