--- a/languages/fr.json
+++ b/languages/fr.json
@@ -10,5 +10,54 @@
             "options": {
             }
         }
-    }
+    },
+
+    "floor": "Étage",
+    "no-meeting": "Plus aucun rendez-vous prévu aujourd'hui",
+    "no-building": "Aucun bâtiment trouvé",
+    "no-meeting-room": "Aucune salle de réunion trouvée",
+    "no-building-rooms": "Salle(s) non liée(s) à un bâtiment",
+    "organized-by": "Organisé par",
+    "with": "Avec",
+    "attendee": "Invité",
+    "attendees": "Invités",
+    "available-until": "Disponible jusqu'à",
+    "free-now": "Libre dès maintenant",
+    "book-now": "Réservez maintenant",
+    "booked": "Réservée",
+    "booking": "Réservation",
+    "select-building": "Sélectionner un bâtiment",
+    "select-meeting-room": "Sélectionner la salle de réunion",
+    "valid": "Valider",
+    "loading": "Chargement",
+    "search": "Rechercher une salle",
+    "error_meeting_room_access": "Aucun accès aux informations de la salle de réunion",
+    "error_appointments_access": "Aucun accès aux évènements de la salle de réunion",
+    "error_building_access": "Aucun accès à la liste des bâtiments",
+    "error_meeting_rooms_access": "Aucun accès à la liste des salles de réunion",
+    "choose-the-duration": "Choisissez la durée",
+    "validate-booking": "Valider",
+    "cancel": "Annuler",
+    "15min": "15 min",
+    "30min": "30 min",
+    "one-hour": "1 heure",
+    "until-the-end-of-the-hour": "Jusqu'à la fin de l'heure",
+    "until-the-next-reservation": "Jusqu'à la prochaine réservation",
+    "out-duration-message": ": La durée dépasse l'heure de début de la prochaine réunion",
+    "check-in": "Démarrer la réunion",
+    "checkin-qrcode-title": "Démarrer",
+    "check-out": "Terminer la réunion",
+    "checkout-qrcode-title": "Terminer",
+    "meeting-finished": "Réunion terminée, synchronisation...",
+    "popup-oops-title": "Oups",
+    "popup-oops-message": "Un problème est survenu. Veuillez réessayer plus tard.",
+    "scan-qrcode": "Scannez le QR Code pour réserver la salle de réunion",
+    "checked-title": "Yeah !",
+    "checked-message": "Votre réunion commence",
+    "checked-out-title": "C'est fini",
+    "checked-out-message": "Votre réunion est terminée",
+    "next-meeting-start-in": "La prochaine réunion commence dans",
+    "on-the-fly-meeting": "Réservation à la volée",
+    "meeting": "Réunion",
+    "booked-from-this-display": "Réservé depuis cet écran"
 }
